# pyattrcache

./: README.md  pyproject.toml
.github/workflows/: tests.yml
pyattrcache/: __init__.py  main.py
tests/: test_cache.py
