[tool.poetry]
name = "pyattrcache"
version = "0.0.1"
description = "Efficient caching of python properties"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cachetools = "5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
